2010-03-13  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/S4.h : new class Rcpp::S4

2010-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.9

	* debian/*: Similarly updated for new release to Debian

2010-03-12  Romain Francois <romain@r-enthusiasts.com>

	* inst/unitTests/runit.environments.R: mac os has a different locale

	* src/Rcpp/traits/is_convertible.h: the detection is now performed without
	the help of cxx0x or tr1 which makes it compatible with gcc 4.2

	* src/Rcpp/traits/is_same.h: new traits is_same to help detect if two types
	are the same (not currently used)

	* src/Rcpp/traits/wrap_type_traits.h: use "unsigned int" instead of "size_t"
	in the template specializations (64 bit compatibility)

2010-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppLdPath.R: More specific about quote-protection of path on Windows

	* inst/doc/Rcpp-introduction.Rnw: Applied several fixes kindly suggested
	  by Matt Kraai

2010-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.8

	* debian/*: Similarly updated for new release to Debian

2010-03-09  Romain Francois <romain@r-enthusiasts.com>

	* man/Rcpp.package.skeleton.Rd: some more documentation

2010-03-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-introduction.Rnw: Added vignette based on a recent paper

2010-03-07  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/StringTransformer.h: new class template StringTransformer
	that allows using a character by character function to modify
	elements of a string vector (example available in package RcppExamples)

	* src/Rcpp/Vector.h: string_proxy::iterator is made const char* because
	R uses a global cache for the CHARSXP

2010-03-05  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h: string_proxy gains begin(), end(),
	size(), and operator[] for iterating over characters of the CHARSXP

2010-03-02  Romain Francois <romain@r-enthusiasts.com>
